misc: update for latest libpico2d changes

--- a/src/cores/smsplus/CMakeLists.txt
+++ b/src/cores/smsplus/CMakeLists.txt
@@ -21,31 +21,34 @@ set(SMS_FLAGS -DMB_SMS -DLSB_FIRST=0
 ####################
 # smsplus binary
 ####################
-add_executable(microboy-sms ${SMS_SOURCES})
-target_include_directories(microboy-sms PUBLIC ${SMS_INCLUDES})
-target_compile_definitions(microboy-sms PUBLIC ${SMS_FLAGS})
-target_link_libraries(microboy-sms ${SMS_LIBS} pico2d-skeleton)
+add_executable(${PROJECT_NAME} ${SMS_SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${SMS_INCLUDES})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${SMS_FLAGS})
+target_link_libraries(${PROJECT_NAME} ${SMS_LIBS} pico2d-skeleton)
 
 # test rom
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     file(GLOB ROMFS romfs/*)
-    target_add_resources(microboy-sms ${ROMFS})
+    target_add_resources(${PROJECT_NAME} ${ROMFS})
 endif ()
 
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
-        set_linker_script(microboy-sms ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_sms.ld)
-        target_compile_definitions(microboy-sms PUBLIC ${SMS_FLAGS} PICO_USE_BOOTLOADER)
+        set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_sms.ld)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC ${SMS_FLAGS} PICO_USE_BOOTLOADER)
     else ()
-        set_linker_flash_size_16(microboy-sms)
+        set_linker_flash_size_16(${PROJECT_NAME})
     endif ()
-    pico_add_uf2_output(microboy-sms)
+    pico_add_uf2_output(${PROJECT_NAME})
     # debug output
-    if (PICO_STDIO_UART)
-        pico_enable_stdio_usb(microboy-sms 0)
-        pico_enable_stdio_uart(microboy-sms 1)
+    if (PICO_DEBUG_UART)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 1)
+    elseif (PICO_DEBUG_USB)
+        pico_enable_stdio_usb(${PROJECT_NAME} 1)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     else ()
-        pico_enable_stdio_usb(microboy-sms 1)
-        pico_enable_stdio_uart(microboy-sms 0)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     endif ()
 endif ()
