--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -14,27 +14,29 @@ set(UI_FLAGS -DMB_UI)
 ####################
 # skeleton library
 ####################
-#add_executable(microboy-ui ${UI_SOURCES} ${RES})
-add_executable(microboy-ui ${UI_SOURCES})
-target_add_resources(microboy-ui ${UI_RESOURCES})
-target_include_directories(microboy-ui PUBLIC ${UI_INCLUDES})
-target_compile_definitions(microboy-ui PUBLIC ${UI_FLAGS})
-target_link_libraries(microboy-ui ${UI_LIBS} pico2d-skeleton)
+add_executable(${PROJECT_NAME} ${UI_SOURCES})
+target_add_resources(${PROJECT_NAME} ${UI_RESOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${UI_INCLUDES})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${UI_FLAGS})
+target_link_libraries(${PROJECT_NAME} ${UI_LIBS} pico2d-skeleton)
 
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
-        set_linker_script(microboy-ui ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_ui.ld)
-        target_compile_definitions(microboy-ui PUBLIC ${UI_FLAGS} PICO_USE_BOOTLOADER)
+        set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_ui.ld)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC ${UI_FLAGS} PICO_USE_BOOTLOADER)
     else ()
-        set_linker_flash_size_16(microboy-ui)
+        set_linker_flash_size_16(${PROJECT_NAME})
     endif ()
-    pico_add_uf2_output(microboy-ui)
+    pico_add_uf2_output(${PROJECT_NAME})
     # debug output
-    if (PICO_STDIO_UART)
-        pico_enable_stdio_usb(microboy-ui 0)
-        pico_enable_stdio_uart(microboy-ui 1)
+    if (PICO_DEBUG_UART)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 1)
+    elseif (PICO_DEBUG_USB)
+        pico_enable_stdio_usb(${PROJECT_NAME} 1)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     else ()
-        pico_enable_stdio_usb(microboy-ui 1)
-        pico_enable_stdio_uart(microboy-ui 0)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     endif ()
 endif ()
