--- a/src/cores/InfoNES/CMakeLists.txt
+++ b/src/cores/InfoNES/CMakeLists.txt
@@ -24,31 +24,34 @@ set(NES_FLAGS -DMB_NES
 ####################
 # InfoNES binary
 ####################
-add_executable(microboy-nes ${NES_SOURCES})
-target_include_directories(microboy-nes PUBLIC ${NES_INCLUDES})
-target_compile_definitions(microboy-nes PUBLIC ${NES_FLAGS})
-target_link_libraries(microboy-nes ${NES_LIBS} pico2d-skeleton)
+add_executable(${PROJECT_NAME} ${NES_SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${NES_INCLUDES})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${NES_FLAGS})
+target_link_libraries(${PROJECT_NAME} ${NES_LIBS} pico2d-skeleton)
 
 # test rom
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     file(GLOB ROMFS romfs/*)
-    target_add_resources(microboy-nes ${ROMFS})
+    target_add_resources(${PROJECT_NAME} ${ROMFS})
 endif ()
 
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
-        set_linker_script(microboy-nes ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_nes.ld)
-        target_compile_definitions(microboy-nes PUBLIC ${NES_FLAGS} PICO_USE_BOOTLOADER)
+        set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_nes.ld)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC ${NES_FLAGS} PICO_USE_BOOTLOADER)
     else ()
-        set_linker_flash_size_16(microboy-nes)
+        set_linker_flash_size_16(${PROJECT_NAME})
     endif ()
-    pico_add_uf2_output(microboy-nes)
+    pico_add_uf2_output(${PROJECT_NAME})
     # debug output
-    if (PICO_STDIO_UART)
-        pico_enable_stdio_usb(microboy-nes 0)
-        pico_enable_stdio_uart(microboy-nes 1)
+    if (PICO_DEBUG_UART)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 1)
+    elseif (PICO_DEBUG_USB)
+        pico_enable_stdio_usb(${PROJECT_NAME} 1)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     else ()
-        pico_enable_stdio_usb(microboy-nes 1)
-        pico_enable_stdio_uart(microboy-nes 0)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     endif ()
 endif ()
