--- a/src/cores/Peanut-GB/CMakeLists.txt
+++ b/src/cores/Peanut-GB/CMakeLists.txt
@@ -21,32 +21,34 @@ set(GB_FLAGS
 ####################
 # Peanut-GB binary
 ####################
-add_executable(microboy-gb ${GB_SOURCES})
-target_include_directories(microboy-gb PUBLIC ${GB_INCLUDES})
-target_compile_definitions(microboy-gb PUBLIC ${GB_FLAGS})
-target_link_libraries(microboy-gb ${GB_LIBS} pico2d-skeleton)
+add_executable(${PROJECT_NAME} ${GB_SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC ${GB_INCLUDES})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${GB_FLAGS})
+target_link_libraries(${PROJECT_NAME} ${GB_LIBS} pico2d-skeleton)
 
 # test rom
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
     file(GLOB ROMFS romfs/*)
-    target_add_resources(microboy-gb ${ROMFS})
+    target_add_resources(${PROJECT_NAME} ${ROMFS})
 endif ()
 
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
-        set_linker_script(microboy-gb ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_gb.ld)
-        target_compile_definitions(microboy-gb PUBLIC ${GB_FLAGS} PICO_USE_BOOTLOADER)
+        set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_gb.ld)
+        target_compile_definitions(${PROJECT_NAME} PUBLIC ${GB_FLAGS} PICO_USE_BOOTLOADER)
     else ()
-        set_linker_flash_size_16(microboy-gb)
+        set_linker_flash_size_16(${PROJECT_NAME})
     endif ()
-    #pico_set_binary_type(microboy-gb copy_to_ram)
-    pico_add_uf2_output(microboy-gb)
+    pico_add_uf2_output(${PROJECT_NAME})
     # debug output
-    if (PICO_STDIO_UART)
-        pico_enable_stdio_usb(microboy-gb 0)
-        pico_enable_stdio_uart(microboy-gb 1)
+    if (PICO_DEBUG_UART)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 1)
+    elseif (PICO_DEBUG_USB)
+        pico_enable_stdio_usb(${PROJECT_NAME} 1)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     else ()
-        pico_enable_stdio_usb(microboy-gb 1)
-        pico_enable_stdio_uart(microboy-gb 0)
+        pico_enable_stdio_usb(${PROJECT_NAME} 0)
+        pico_enable_stdio_uart(${PROJECT_NAME} 0)
     endif ()
 endif ()
