--- a/src/ui/CMakeLists.txt
+++ b/src/ui/CMakeLists.txt
@@ -22,21 +22,9 @@ target_link_libraries(${PROJECT_NAME} ${UI_LIBS} retropico-common pico2d-skeleto
 
 if (NOT PLATFORM_LINUX)
     if (PICO_USE_BOOTLOADER)
-        set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_ui.ld)
-        target_compile_definitions(${PROJECT_NAME} PUBLIC ${UI_FLAGS} PICO_USE_BOOTLOADER)
+        #set_linker_script(${PROJECT_NAME} ${CMAKE_SOURCE_DIR}/src/bootloader/memmap_ui.ld)
+        #target_compile_definitions(${PROJECT_NAME} PUBLIC ${UI_FLAGS} PICO_USE_BOOTLOADER)
     else ()
-        set_linker_flash_size_16(${PROJECT_NAME})
-    endif ()
-    pico_add_uf2_output(${PROJECT_NAME})
-    # debug output
-    if (PICO_DEBUG_UART)
-        pico_enable_stdio_usb(${PROJECT_NAME} 0)
-        pico_enable_stdio_uart(${PROJECT_NAME} 1)
-    elseif (PICO_DEBUG_USB)
-        pico_enable_stdio_usb(${PROJECT_NAME} 1)
-        pico_enable_stdio_uart(${PROJECT_NAME} 0)
-    else ()
-        pico_enable_stdio_usb(${PROJECT_NAME} 0)
-        pico_enable_stdio_uart(${PROJECT_NAME} 0)
+        target_set_pico2d_stuff(${PROJECT_NAME})
     endif ()
 endif ()
